--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
+    "@vue/apollo-option": "^4.0.0-alpha.15",
+    "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
+    "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.6",
+    "react": "^17.0.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
