--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@vue/apollo-composable": "^4.0.0-alpha.15",
     "@vue/apollo-option": "^4.0.0-alpha.15",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
