--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
